# beaver

./: .env.install  .env.sample  .gitignore  README.md  docker-compose.install.yml  docker-compose.yml  generate_tg_session.py  pyproject.toml
beaver/: config.py  main.py
beaver/api/: __init__.py  app.py  auth.py  deps.py
beaver/api/routers/: __init__.py  auth_routes.py  chat.py  embeddings.py  functions.py  knowledge.py  mcp.py  metrics.py  models.py
beaver/cli/: client.py
beaver/core/: __init__.py  exceptions.py  schemas.py
beaver/core/interfaces/: __init__.py  embeddings.py  llm.py  vectorstore.py
beaver/db/: __init__.py  models.py  session.py
beaver/installer/: __init__.py  catalog.py  cli.py  compose.py  prompts.py  setup.py
beaver/mcp/: __init__.py  client.py  manager.py  registry.py
beaver/migrations/: 001_create_users.sql  002_create_api_keys.sql  003_create_documents.sql  004_create_functions.sql  005_create_mcp_servers.sql  006_create_request_logs.sql  007_add_document_source.sql  008_create_vector_chunks.sql  __init__.py  runner.py
beaver/services/: __init__.py  embeddings.py  functions.py  knowledge.py  llm.py  metrics.py  vectorstore.py
beaver/workers/: __init__.py  indexer.py
docker/: api.Dockerfile  telegram-bot.Dockerfile  telegram-bot.py  telegram-mcp-bridge.py  telegram-mcp.Dockerfile  worker.Dockerfile
